tests/auto/qxmlstream/XML-Test-Suite/xmlconf/ibm/invalid/P68/ibm68i02.dtd
<!ELEMENT a EMPTY>
<!ATTLIST a attr1 CDATA "&ge1;">
<!--* GE reference in attr default before declaration *-->
<!ENTITY ge1 "abcdef">